# dis-ademe-1

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
notebooks/: jina.ipynb
src/: app.py  embedding.py
